# stinkbot

./: .cursorignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER_AWS_DEPLOYMENT.md  Dockerfile  FAIL-OVER.md  FEEDBACK.md  ISSUE_TRACKING.md  QUICK_START_AWS.md  README.md  README.new.md  TODO.md  aws-infrastructure.yml  aws-task-definition.json  build-and-push.sh  database_setup.sql  deploy-aws.sh  deploy-infrastructure.sh  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  setup.sh
.cursor/rules/: .cursorignore  directory_structure.mdc
.github/workflows/: bot.yml  docker-image.yml
bot/: .env.example  .gitignore  AUDIT_REPORT.md  Dockerfile  README.md  package-lock.json  package.json
bot-rust/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
bot-rust/src/: cache.rs  database.rs  main.rs  message_handler.rs  werewolf.rs
bot-rust/src/commands/: game.rs  mod.rs  ping.rs  player.rs
bot/docs/: ALIVE_MENTION_SYSTEM.md  (+3 more)
database/: .env.example  AUDIT_REPORT.md  README.md  current_schema.sql  generate_schema.js  migrate.js  package.json
docs/: archives-search-system.md
engine-generator/: GAME_ENGINE.md  README.md  ROLES.md  RULES.md  package-lock.json  package.json  roles.json  rules.json  tsconfig.json
frontend/: .env.example  AUDIT_REPORT.md  NIGHT_ACTION_PROMPT.txt  OPENSEARCH_SETUP.md  PENDING_WORK.md  README.md  package.json  test-prompt.js
scripts/: regenerate-feedback-md.py
src/: database.js  index.js  werewolf-bot.js
temp/: TEMP.md  database.yml  frontend.yml
test/: dev-utils.js  test-bot.js
(+257 files in other folders)
