[package]
name = "stinkwolf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Discord API
serenity = { version = "0.12", features = ["full"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Environment variable loading
dotenv = "0.15"

# Database - PostgreSQL
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
deadpool-postgres = { version = "0.12.1", features = ["serde"] }

# Time and timezone handling
chrono = { version = "0.4", features = ["serde"] }

# OpenAI API
async-openai = "0.29.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# String utilities for performance
lazy_static = "1.4"
regex = "1.10"

# Caching for performance
moka = { version = "0.12", features = ["future"] }